--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true
+search_full_content      : true
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -281,6 +281,8 @@ defaults:
       path: ""
       type: posts
     values:
+      show_date: true
+      date_format: "%B %-d, %Y"
       layout: single
       author_profile: true
       read_time: true
